Adding filter to portfolio page

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -31,16 +31,16 @@
                     <nav class="filter-nav">
                         <ul class="filter-list">
                             <li class="filter-list__item active">
-                                <a href="#">All</a>
+                                <a href="#" id="all">All</a>
                             </li>
                             <li class="filter-list__item">
-                                <a href="#">Residential</a>
+                                <a href="#" id="residential">Residential</a>
                             </li>
                             <li class="filter-list__item">
-                                <a href="#">Corporate</a>
+                                <a href="#" id="corporate">Corporate</a>
                             </li>
                             <li class="filter-list__item">
-                                <a href="#">Retail & Leisure</a>
+                                <a href="#" id="retail">Retail & Leisure</a>
                             </li>
                         </ul>
                     </nav>
@@ -49,81 +49,81 @@
                 <main>                    
                     <!-- Projects Grid -->
                     <div class="projects-grid">
-                        <div class="projects-grid__item cover w50 h100">
-                            <img src="https://www.w3schools.com/w3images/wedding.jpg">
-                            <div class="overlay">
+                        <div class="projects-grid__item cover w50 h100 residential">
+                            <img src="../assets/images/prop01_01.jpg">
+                            <a href="#" class="overlay">
                                 <div class="text">Hello World</div>
-                            </div>
+                            </a>
                         </div>
-                        <div class="projects-grid__item cover w50 h50">
-                            <img src="https://www.w3schools.com/w3images/rocks.jpg">
-                            <div class="overlay">
+                        <div class="projects-grid__item cover w50 h50 corporate">
+                            <img src="../assets/images/C02.jpg">
+                            <a href="#" class="overlay">
                                 <div class="text">Hello World</div>
+                            </a>
+                        </div>
+                        <div class="projects-grid__item w50 h50 retail">
+                            <div class="cover">
+                                <img src="../assets/images/MB02.jpg">
+                                <a href="#" class="overlay">
+                                    <div class="text">Hello World</div>
+                                </a>
+                            </div>
+                            <div class="cover">
+                                <img src="../assets/images/C04.jpg">
+                                <a href="#" class="overlay">
+                                    <div class="text">Hello World</div>
+                                </a>
                             </div>
                         </div>
-                        <div class="projects-grid__item w50 h50">
-                            <div class="cover">
-                                <img src="https://www.w3schools.com/w3images/falls2.jpg">
-                                <div class="overlay">
-                                    <div class="text">Hello World</div>
-                                </div>
-                            </div>
-                            <div class="cover">
-                                <img src="https://www.w3schools.com/w3images/paris.jpg">
-                                <div class="overlay">
-                                    <div class="text">Hello World</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="projects-grid__item w25 h100">
+                        <div class="projects-grid__item w25 h100 retail">
                             <div class="cover">
                                 <img src="https://www.w3schools.com/w3images/nature.jpg">
-                                <div class="overlay">
+                                <a href="#" class="overlay">
                                     <div class="text">Hello World</div>
-                                </div>
+                                </a>
                             </div>
                             <div class="cover">
                                 <img src="https://www.w3schools.com/w3images/mist.jpg">
-                                <div class="overlay">
+                                <a href="#" class="overlay">
                                     <div class="text">Hello World</div>
-                                </div>
+                                </a>
                             </div>
                         </div>                        
-                        <div class="projects-grid__item cover w25 h100">
+                        <div class="projects-grid__item cover w25 h100 retail">
                             <img src="https://www.w3schools.com/w3images/underwater.jpg">
-                            <div class="overlay">
+                            <a href="#" class="overlay">
                                 <div class="text">Hello World</div>
-                            </div>
+                            </a>
                         </div>
-                        <div class="projects-grid__item cover w50 h100">
+                        <div class="projects-grid__item cover w50 h100 residential">
                             <img src="https://www.w3schools.com/w3images/ocean.jpg">
-                            <div class="overlay">
+                            <a href="#" class="overlay">
                                 <div class="text">Hello World</div>
-                            </div>
+                            </a>
                         </div>
-                        <div class="projects-grid__item cover w50 h100">
+                        <div class="projects-grid__item cover w50 h100 residential">
                             <img src="https://www.w3schools.com/w3images/wedding.jpg">
-                            <div class="overlay">
+                            <a href="#" class="overlay">
                                 <div class="text">Hello World</div>
-                            </div>
+                            </a>
                         </div>
-                        <div class="projects-grid__item cover w25 h100">
+                        <div class="projects-grid__item cover w25 h100 corporate">
                             <img src="https://www.w3schools.com/w3images/underwater.jpg">
-                            <div class="overlay">
+                            <a href="#" class="overlay">
                                 <div class="text">Hello World</div>
-                            </div>
+                            </a>
                         </div>
-                        <div class="projects-grid__item cover w25 h100">
+                        <div class="projects-grid__item cover w25 h100 corporate">
                             <img src="https://www.w3schools.com/w3images/ocean.jpg">
-                            <div class="overlay">
+                            <a href="#" class="overlay">
                                 <div class="text">Hello World</div>
-                            </div>
+                            </a>
                         </div>                        
-                        <div class="projects-grid__item cover w100 h50">
+                        <div class="projects-grid__item cover w100 h50 corporate">
                             <img src="https://www.w3schools.com/w3images/rocks.jpg">
-                            <div class="overlay">
+                            <a href="#" class="overlay">
                                 <div class="text">Hello World</div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </main>
@@ -131,7 +131,6 @@
         </div>
         <script src="../js/jquery.min.js"></script>
         <script src="../js/bootstrap.min.js"></script>
-        <script src="../isotope.pkgd.min.js"></script>
         <script src="../js/main.js"></script>        
     </body>
 </html>
