--- a/pages/project.html
+++ b/pages/project.html
@@ -36,8 +36,8 @@
                     <div class="project-slider__item" style="background-image: url(../assets/images/C04.jpg)">
                     </div>
                     <div class="project-slider__nav">
-                        <button onclick="plusSlides(-1)"><i class="fas fa-chevron-up"></i></button>
-                        <button onclick="plusSlides(1)"><i class="fas fa-chevron-down"></i></button>                        
+                        <button class="prev-btn"><i class="fas fa-chevron-up"></i></button>
+                        <button class="next-btn"><i class="fas fa-chevron-down"></i></button>                        
                     </div>
                 </div>
             </section>
