Adding project info section

--- a/pages/project.html
+++ b/pages/project.html
@@ -34,10 +34,28 @@
                     <div class="project-slider__item" style="background-image: url(../assets/images/MB02.jpg)">
                     </div>
                     <div class="project-slider__item" style="background-image: url(../assets/images/C04.jpg)">
-                    </div>
-                    <div class="project-slider__nav">
-                        <button class="prev-btn"><i class="fas fa-chevron-up"></i></button>
-                        <button class="next-btn"><i class="fas fa-chevron-down"></i></button>                        
+                    </div>                    
+                </div>
+                <!-- Slider Nav -->
+                <div class="project-slider__nav">
+                    <button class="prev-btn"><i class="fas fa-chevron-up"></i></button>
+                    <button class="next-btn"><i class="fas fa-chevron-down"></i></button>                        
+                </div>
+                <!-- Slider Info -->
+                <div class="project-slider__info">
+                    <a class="btn-close"><i class="fas fa-times"></i></a>
+                    <h3 class="project-name">private villa</h3>
+                    <p class="project-location">
+                        <span>Grand Heights</span>
+                        <span>- Sheikh zayed</span>
+                    </p>
+                    <hr>
+                    <p class="project-category">Residential</p>
+                    <div class="projects-nav">
+                        <a href="#" class="nav-arrow"><i class="fas fa-arrow-right"></i></a>
+                        <a href="#" class="nav-left"><i class="fas fa-chevron-left"></i></a>
+                        <a href="#" class="nav-grid"><i class="fas fa-th"></i></a>
+                        <a href="#" class="nav-right"><i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
             </section>
