Fixed All buttons should be black on hover

--- a/pages/project.html
+++ b/pages/project.html
@@ -27,7 +27,7 @@
             <section class="main-wrapper">                
                 <!-- Project Slider -->
                 <div class="project-slider">
-                    <div class="project-slider__item" style="background-image: url(../assets/images/main.jpg)">
+                    <div class="project-slider__item" style="background-image: url(../assets/images/C06.jpg)">
                     </div>
                     <div class="project-slider__item" style="background-image: url(../assets/images/prop01_01.jpg)">
                     </div>                        
@@ -43,7 +43,7 @@
                 </div>
                 <!-- Slider Info -->
                 <div class="project-slider__info">
-                    <a class="btn-close"><i class="fas fa-times"></i></a>
+                    <a class="btn-close" href="#"><i class="fas fa-times"></i></a>
                     <h3 class="project-name">private villa</h3>
                     <p class="project-location">
                         <span>Grand Heights</span>
