--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -12,10 +12,34 @@
     </head>
     <body>        
         <div class="page-container">
+            <div class="main-menu-container">
+                <!-- Hamburger Button -->
+                <div class="hamburger hamburger--spring">
+                    <div class="hamburger-box">
+                        <div class="hamburger-inner"></div>
+                    </div>
+                </div>
+                <!-- Main Menu -->
+                <ul class="main-menu">
+                    <li class="main-menu__item"><a class="main-menu__link" href="#">Home</a></li>
+                    <li class="main-menu__item">
+                        <a class="main-menu__link" href="#">Portfolio</a>
+                        <ul class="sub-menu">
+                            <li class="sub-menu__item"><a class="sub-menu__link" href="#">All</a></li>
+                            <li class="sub-menu__item"><a class="sub-menu__link" href="#">Residential</a></li>
+                            <li class="sub-menu__item"><a class="sub-menu__link" href="#">Corporate</a></li>
+                            <li class="sub-menu__item"><a class="sub-menu__link" href="#">Retail & Leisure</a></li>
+                        </ul>
+                    </li>
+                    <li class="main-menu__item"><a class="main-menu__link" href="#">About</a></li>
+                    <li class="main-menu__item"><a class="main-menu__link" href="#">Contact</a></li>                    
+                </ul>
+            </div>
             <aside>
                 <!-- Logo -->
                 <a href="#" class="logo">
                     <img src="../assets/images/logo.png" alt="" class="logo-img">
+                    <p class="logo-tagline">Architecture. Interior Design, & Landscape</p>
                 </a>
                 <!-- Footer -->
                 <footer>
