--- a/pages/project.html
+++ b/pages/project.html
@@ -12,19 +12,43 @@
     </head>
     <body>        
         <div class="page-container">
-            <aside>
+            <div class="main-menu-container">
+                <!-- Hamburger Button -->
+                <div class="hamburger hamburger--spring">
+                    <div class="hamburger-box">
+                        <div class="hamburger-inner"></div>
+                    </div>
+                </div>
+                <!-- Main Menu -->
+                <ul class="main-menu">
+                    <li class="main-menu__item"><a class="main-menu__link" href="#">Home</a></li>
+                    <li class="main-menu__item">
+                        <a class="main-menu__link" href="#">Portfolio</a>
+                        <ul class="sub-menu">
+                            <li class="sub-menu__item"><a class="sub-menu__link" href="#">All</a></li>
+                            <li class="sub-menu__item"><a class="sub-menu__link" href="#">Residential</a></li>
+                            <li class="sub-menu__item"><a class="sub-menu__link" href="#">Corporate</a></li>
+                            <li class="sub-menu__item"><a class="sub-menu__link" href="#">Retail & Leisure</a></li>
+                        </ul>
+                    </li>
+                    <li class="main-menu__item"><a class="main-menu__link" href="#">About</a></li>
+                    <li class="main-menu__item"><a class="main-menu__link" href="#">Contact</a></li>                    
+                </ul>
+            </div>
+            <aside>      
                 <!-- Logo -->
                 <a href="#" class="logo">
                     <img src="../assets/images/logo.png" alt="" class="logo-img">
+                    <p class="logo-tagline">Architecture. Interior Design, & Landscape</p>
                 </a>
                 <!-- Footer -->
                 <footer>
                     <p>&copyright;2018 Firma Designs.</p>
                     <p>All Rights Reserved.</p>
                     <p>Site by: Saud Designs</p>
-                </footer>                
+                </footer>   
             </aside>
-            <section class="main-wrapper">                
+            <section class="main-wrapper">
                 <!-- Project Slider -->
                 <div class="project-slider">
                     <div class="project-slider__item" style="background-image: url(../assets/images/C06.jpg)">
