Added logo for mobile

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -41,6 +41,10 @@
                     <img src="../assets/images/logo.png" alt="" class="logo-img">
                     <p class="logo-tagline">Architecture. Interior Design, & Landscape</p>
                 </a>
+                <a href="#" class="logo-mob">
+                    <img src="../assets/images/logo-mob.png" alt="" class="logo-img">
+                    <p class="logo-tagline">Architecture. Interior Design, & Landscape</p>
+                </a>
                 <!-- Footer -->
                 <footer>
                     <p>&copyright;2018 Firma Designs.</p>
