--- a/pages/project.html
+++ b/pages/project.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Firma - Portfolio</title>        
+        <title>Firma - Project</title>        
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/all.min.css">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -39,6 +39,10 @@
                 <!-- Logo -->
                 <a href="#" class="logo">
                     <img src="../assets/images/logo.png" alt="" class="logo-img">
+                    <p class="logo-tagline">Architecture. Interior Design, & Landscape</p>
+                </a>
+                <a href="#" class="logo-mob">
+                    <img src="../assets/images/logo-mob.png" alt="" class="logo-img">
                     <p class="logo-tagline">Architecture. Interior Design, & Landscape</p>
                 </a>
                 <!-- Footer -->
