Updating the layout for the responsive design

--- a/pages/project.html
+++ b/pages/project.html
@@ -11,8 +11,12 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>        
-        <div class="page-container">
+        <div class="page-container">            
             <div class="main-menu-container">
+                <!-- Logo Mobile -->
+                <a href="#" class="logo-mob">
+                    <img src="../assets/images/logo-mob.png" alt="" class="logo-img">
+                </a>
                 <!-- Hamburger Button -->
                 <div class="hamburger hamburger--spring">
                     <div class="hamburger-box">
@@ -34,24 +38,7 @@
                     <li class="main-menu__item"><a class="main-menu__link" href="#">About</a></li>
                     <li class="main-menu__item"><a class="main-menu__link" href="#">Contact</a></li>                    
                 </ul>
-            </div>
-            <aside>      
-                <!-- Logo -->
-                <a href="#" class="logo">
-                    <img src="../assets/images/logo.png" alt="" class="logo-img">
-                    <p class="logo-tagline">Architecture. Interior Design, & Landscape</p>
-                </a>
-                <a href="#" class="logo-mob">
-                    <img src="../assets/images/logo-mob.png" alt="" class="logo-img">
-                    <p class="logo-tagline">Architecture. Interior Design, & Landscape</p>
-                </a>
-                <!-- Footer -->
-                <footer>
-                    <p>&copyright;2018 Firma Designs.</p>
-                    <p>All Rights Reserved.</p>
-                    <p>Site by: Saud Designs</p>
-                </footer>   
-            </aside>
+            </div>            
             <section class="main-wrapper">
                 <!-- Project Slider -->
                 <div class="project-slider">
@@ -87,6 +74,19 @@
                     </div>
                 </div>
             </section>
+            <aside>      
+                <!-- Logo -->
+                <a href="#" class="logo">
+                    <img src="../assets/images/logo.png" alt="" class="logo-img">
+                    <p class="logo-tagline">Architecture. Interior Design, & Landscape</p>
+                </a>
+                <!-- Footer -->
+                <footer>
+                    <p>&copyright;2018 Firma Designs.</p>
+                    <p>All Rights Reserved.</p>
+                    <p>Site by: Saud Designs</p>
+                </footer>   
+            </aside>
         </div>
         <script src="../js/all.min.js"></script>
         <script src="../js/jquery.min.js"></script>
